--- a/models/sandyBridge.cfg
+++ b/models/sandyBridge.cfg
@@ -72,9 +72,9 @@ processor:{
 
 		memory:{
 			load:{
-				latency = 2;			# LATENCY_MEM_LOAD
+				latency = 1;			# LATENCY_MEM_LOAD
 				wait_next = 1;		# WAIT_NEXT_MEM_LOAD
-				unit = 1;					# LOAD_UNIT
+				unit = 2;					# LOAD_UNIT
 			}
 			store:{
 				latency = 1;			# LATENCY_MEM_STORE
@@ -129,37 +129,43 @@ processor:{
 		attr_common:{
 			line_size = 64;								# LINE_SIZE
 			cache_levels = 2;							# CACHE_LEVELS
+			total_levels = 4;
 			instruction_enabled = 1;			# INSTRUCTION_ENABLED
 			offset_size = 6;							# OFFSET_SIZE
 		}
 
 		# -------------------------------------- #
 
-		levels:{
-			l1_data:{
-				size = 32768L;							# L1_DATA_SIZE
-				associativity = 8;					# L1_DATA_ASSOCIATIVITY
-				latency = 3;								# L1_DATA_LATENCY
-			}
+		levels = (
 
-			l1_inst:{
+			{
+				name = "L1 inst";
 				size = 32768L;							#	L1_INST_SIZE
 				associativity = 8;					#	L1_INST_ASSOCIATIVITY
-				latency = 3;								#	L1_INST_LATENCY
-			}
+				latency = 2;								#	L1_INST_LATENCY
+			},
 
-			l2:{
+			{
+			name = "L1 data";
+			size = 32768L;							# L1_DATA_SIZE
+			associativity = 8;					# L1_DATA_ASSOCIATIVITY
+			latency = 2;								# L1_DATA_LATENCY
+			},
+
+			{
+				name = "L2";
 				size = 262144L;							#	L2_SIZE
 				associativity = 4;					#	L2_ASSOCIATIVITY
-				latency = 12;								#	L2_LATENCY
-			}
+				latency = 8;								#	L2_LATENCY
+			},
 
-			llc:{
-				size = 4096L;								#	LLC_SIZE
-				associativity = 16;					#	LLC_ASSOCIATIVITY
-				latency = 12;								#	LLC_LATENCY
+			{
+				name = "LLC";
+				size = 20971520L;						#	LLC_SIZE
+				associativity = 20;					#	LLC_ASSOCIATIVITY
+				latency = 6;								#	LLC_LATENCY
 			}
-		}
+		);
 
 		# -------------------------------------- #
 
@@ -167,10 +173,11 @@ processor:{
 		ram:{
 			latency = 200;								# RAM_LATENCY
 			size = 4294967296L;						# RAM_SIZE
+			max_parallel_requests = 8;		# MAX_PARALLEL_REQUESTS
 		}
 
 		prefetcher:{
-			stride_table_size = 16;				# STRIDE_TABLE_SIZE
+			stride_table_size = 32;				# STRIDE_TABLE_SIZE
 			degree = 1;										# DEGREE
 			distance = 4;									# DISTANCE
 		}
@@ -215,8 +222,8 @@ processor:{
 		}
 	}
 
-	heartbeat_clocks = 10000000;			# HEARTBEAT_CLOCKS
+	heartbeat_clocks = 5000000;				# HEARTBEAT_CLOCKS
 
-	clocks_to_check = 10;							# CLOCKS_TO_CHECK
-	wait_cycle = 209999;							# WAIT_CYCLE
+	clocks_to_check = 1000000;				# CLOCKS_TO_CHECK
+	wait_cycle = 5500;								# WAIT_CYCLE
 }
