--- a/models/skylake.cfg
+++ b/models/skylake.cfg
@@ -129,7 +129,7 @@ processor:{
 		attr_common:{
 			line_size = 64;								# LINE_SIZE
 			cache_levels = 2;							# CACHE_LEVELS
-			total_levels = 4;
+			total_levels = 4;							# Apenas indica quantos tipos diferentes de caches este arquivo possui
 			instruction_enabled = 1;			# INSTRUCTION_ENABLED
 			offset_size = 6;							# OFFSET_SIZE
 		}
@@ -137,18 +137,19 @@ processor:{
 		# -------------------------------------- #
 
 		levels = (
-			{
-				name = "L1 data";
-				size = 32768L;							# L1_DATA_SIZE
-				associativity = 8;					# L1_DATA_ASSOCIATIVITY
-				latency = 4;								# L1_DATA_LATENCY
-			},
 
 			{
 				name = "L1 inst";
 				size = 32768L;							#	L1_INST_SIZE
 				associativity = 8;					#	L1_INST_ASSOCIATIVITY
 				latency = 4;								#	L1_INST_LATENCY
+			},
+
+			{
+				name = "L1 data";
+				size = 32768L;							# L1_DATA_SIZE
+				associativity = 8;					# L1_DATA_ASSOCIATIVITY
+				latency = 4;								# L1_DATA_LATENCY
 			},
 
 			{
@@ -172,6 +173,7 @@ processor:{
 		ram:{
 			latency = 200;								# RAM_LATENCY
 			size = 4294967296L;						# RAM_SIZE
+			max_parallel_requests = 10;		# MAX_PARALLEL_REQUESTS
 		}
 
 		prefetcher:{
